[package]
name = "guild"
version = "0.1.1"
authors = ["jakecorrenti <jcorrenti13@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Guild is a Command Line Interface build with Rust that posts code snippets to a Discord channel using Webhooks."
readme = "README.md"
homepage = "https://github.com/jakecorrenti/guild"
repository = "https://github.com/jakecorrenti/guild"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33", features = ["yaml"] }
tokio = { version = "~0.2", features = ["full"] }
serenity = "0.9.3"
