[package]
name = "guild"
version = "0.1.2"
authors = ["jakecorrenti <jcorrenti13@outlook.com>"]
edition = "2018"
license = "MIT"
description = "Guild is a Command Line Interface build with Rust that posts code snippets to a Discord channel using Webhooks."
readme = "README.md"
homepage = "https://github.com/jakecorrenti/guild"
repository = "https://github.com/jakecorrenti/guild"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~2.33", features = ["yaml"] }
tokio = { version = "1", features = ["rt", "macros", "rt-multi-thread"] }
serenity = { version = "0.9.3", features = ["rustls_backend", "http", "model"], default-features = false }
